[nobug] cleanups in DeploymentDescriptorPropertyCache